sandbox/output
ProfitTest.java:7: error: cannot find symbol
        assertEquals(1, totalProfits);
                        ^
  symbol:   variable totalProfits
  location: class ProfitTest
1 error
